# ai-optimizers-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: project-context.mdc
configs/: adult_mlp.yaml  cifar100_resnet34.yaml  cifar10_resnet18.yaml  covertype_mlp.yaml  fmnist_simplecnn.yaml  svhn_wrn164.yaml
scripts/: plot_results.py  run_all.sh  run_experiment.py
src/: metrics.py  trainer.py  utils.py
src/datasets/: __init__.py  image_datasets.py  tabular_datasets.py
src/models/: __init__.py  mlp.py  resnet.py  simple_cnn.py  wrn.py
src/optimizers/: __init__.py  adamuon.py  kfac.py
